networkpolicy/policies/openshift-template-service-broker/template-service-broker-ingress.yml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: template-service-broker-ingress
spec:
  podSelector:
    matchLabels:
      apiserver: "true"
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            name: kube-service-catalog
      ports:
        - port: 8443
          protocol: TCP
